# ForestEngine

./: .gitignore  CMakeLists.txt  README.md  TODO.md
Vulkan/: App.cpp  App.h
apps/Sandbox/: Sandbox.cpp  Sandbox.hpp  main.cpp
code/Assets/Config/: ConfigObject.cpp
code/Assets/Font/: Font.cpp  Font.hpp
code/Assets/Image/: ImageUtils.cpp
code/Core/: BasicTypes.hpp  ByteBuffer.hpp  ClassManager.cpp  ClassManager.hpp  Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  EngineSystem.cpp  EngineSystem.hpp  EnumsManager.cpp  EnumsManager.hpp  Functor.hpp  GenericObject.hpp  Handler.hpp  Hash.hpp  Macros.hpp  Memory.cpp  Memory.hpp  Metadata.hpp  Minimal.hpp  Module.hpp  ObjectBase.hpp  Pointers.hpp  Pool.hpp  Reference.hpp  Serialization.hpp  Singleton.hpp  SlotsManager.hpp  Std.hpp  StdCore.hpp  StdFull.hpp  StdMacros.hpp  StdPrimitiveTypes.hpp  Subsystem.hpp
code/Core/Assert/: Assert.cpp  Assert.hpp
code/Core/Command/: Command.hpp  CommandLine.cpp  CommandLine.hpp  DefaultCommands.cpp  DefaultCommands.hpp
code/Core/Config/: ConfigObject.cpp  ConfigObject.hpp  Paths.hpp
code/Core/ConstString/: ConstString.cpp  ConstString.hpp
code/Core/ECS/: Component.cpp  Component.hpp  ComponentHandler.cpp  ComponentHandler.hpp  ComponentsManager.cpp  ComponentsManager.hpp  Entity.cpp  Entity.hpp  EntityHandler.cpp  EntityHandler.hpp  EntityManager.cpp  EntityManager.hpp  GameObjectsManager.cpp  GameObjectsManager.hpp  System.cpp  System.hpp
code/Core/Environment/: Environment.hpp
code/Core/Events/: Event.hpp  EventsManager.cpp  EventsManager.hpp
code/Core/File/: File.cpp  File.hpp  FileUtils.cpp  FileUtils.hpp
code/Core/Font/: Font.cpp  Font.hpp
code/Core/HashedString/: HashedString.cpp  HashedString.hpp
code/Core/Image/: ImageUtils.cpp  ImageUtils.hpp
code/Core/Input/: Input.cpp  Input.hpp  InputEvents.hpp
code/Core/Log/: Log.cpp  Log.hpp
code/Core/Maths/: Geometry.cpp  Geometry.hpp  MathUtils.cpp  MathUtils.hpp  Matrix4.cpp  Matrix4.hpp  Module.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  VectorDef.hpp
code/Core/Memory/: ByteBuffer.hpp  GenericObject.hpp  Memory.cpp  Memory.hpp  MemoryTracking.cpp  MemoryTracking.hpp  Pointers.hpp  Pool.hpp  SlotsManager.hpp
code/Core/Metadata/: ClassManager.cpp  (+5 more)
code/Engine/: Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  EngineSystem.cpp  EngineSystem.hpp  Minimal.hpp  System.cpp  System.hpp
code/Graphics/: Mesh.cpp  Mesh.hpp  MeshPrimitives.cpp  MeshPrimitives.hpp  Module.hpp  RenderContext.cpp  RenderContext.hpp  RenderEngine.cpp  RenderEngine.hpp  RenderSharedContext.cpp  RenderSharedContext.hpp  RenderState.cpp  RenderState.hpp  Renderer.cpp  Renderer.hpp  ShapeBatchRenderer.cpp  ShapeBatchRenderer.hpp
code/Scene/: Component.cpp  Component.hpp  ComponentManager.cpp  ComponentsManager.hpp  GameObject.cpp  GameObject.hpp  GameObjectsManager.cpp  GameObjectsManager.hpp  Module.hpp  Scene.cpp  Scene.hpp  ScenesManager.cpp  ScenesManager.hpp  Transform.cpp  Transform.hpp
code/Scenes/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  ScenesManager.hpp  Transform.cpp  Transform.hpp
code/Scripting/: Module.hpp  Script.cpp  Script.hpp  ScriptEngine.cpp  ScriptEngine.hpp
code/SpacePartition/: KTree.cpp  KTree.hpp  OcTree.cpp  OcTree.hpp  OcTreeElement.cpp  OcTreeElement.hpp
code/Test/: Test.cpp  Test.hpp
code/UI/: Module.hpp  UIBuilder.cpp  UIBuilder.hpp  UIButton.cpp  UIButton.hpp  UIDropdown.cpp  UIDropdown.hpp  UIEditableText.cpp  UIEditableText.hpp  UIElement.cpp  UIElement.hpp  UIElementConfig.cpp  UIElementConfig.hpp  UIFont.cpp  UIFont.hpp  UIGroup.cpp  UIGroup.hpp  UIList.cpp  UIList.hpp  UIManager.cpp  UIManager.hpp  UIMaterial.cpp  UIMaterial.hpp  UIPanel.cpp  UIPanel.hpp  UIStyle.cpp  UIStyle.hpp  UIText.cpp  UIText.hpp  UIUtils.cpp  UIUtils.hpp
config/: engine.json
resources/: Player.blend  Player.blend1  Player.fbx  Robot-Dog(Animated).blend  Spider.fbx  cat_rigged_animation_run.blend  cat_rigged_animation_run.blend1  cat_rigged_animation_run.fbx
resources/Building_1/: building.fbx  building.mtl  building1.blend  building1.gltf
resources/Dummy/: Dummy.blend  Dummy.blend1
resources/Floor/: Floor.blend  Floor.blend1  Floor.gltf
resources/Rumba/: Rumba.gltf
resources/Run/: Run.gltf
resources/Vanguard-gltf/: Vanguard.gltf
resources/Wall/: Wall.blend  Wall.blend1  Wall.gltf
resources/bob_lamp/: bob_lamp_simple.blend  bob_lamp_simple.blend1  bob_lamp_update.blend  bob_lamp_update.blend1  bob_lamp_update.fbx  bob_lamp_update.gltf  bob_lamp_update_export.blend  bob_lamp_update_export.blend1  bob_lamp_update_export.dae  bob_lamp_update_export.fbx  bob_lamp_update_export.md5mesh
resources/building/: building.3ds  building.blend  building.blend1  building.fbx  building.gltf  building.mtl
resources/cube/: cube.blend  cube.blend1  cube.fbx
resources/dragon/: Dragon 2.5_fbx.fbx  readme.txt  untitled.fbx
resources/mountain/: mount.blend1.3ds  mount.blend1.blend  mount.blend1.blend1  mount.blend1.gltf  mount.blend1.mtl
resources/shaders/: fragment.shader  fragmentDebug.shader  vertex.shader
resources/wolf/: Wolf_One_fbx7.4_binary.fbx  Wolf_One_fbx_6.1_ASCII.fbx  Wolf_UDK.fbx  Wolf_UDK_2.fbx  Wolf_fbx.fbx
scripts/: build-gui.py  build.py  clean.py  dependencies.py  generateClassesRegister.py  generateCode.py  generateHeaderSource.py  generateHeaders.py  generateIncludes.py  generateInstanceByName.py  overwriteFile.py
scripts/deprecated/: generateClassList.py  generateClassesRegister.py  generateHeaderSource.py  generateHeaders.py  generateIncludes.py  preBuild.py
scripts/lib/: build_global_data.py  cmake_build.py  download_file.py  extract_files.py  log.py
tools/Editor/: AxisViewer.cpp  AxisViewer.hpp  Editor.cpp  Editor.hpp  EditorCommands.cpp  EditorCommands.hpp  EditorController.cpp  EditorController.hpp  UIAxisGizmo.cpp  UIAxisGizmo.hpp  UISceneTree.cpp  UISceneTree.hpp  UITransform.cpp  UITransform.hpp  UIVector.cpp  UIVector.hpp  main.cpp
(+444 files in other folders)
